fix tag spacing and update some text

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -65,6 +65,16 @@ pre {
     align-items: center;
 }
 
+.post-tags {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tag {
+    padding: 0 0.5rem;
+    white-space: nowrap;
+}
+
 @media only screen and (max-width:720px) {
     .about_me {
         width: 100%;
